<resources>
    <string name="app_name">PerkaApp</string>

    <string name="action_settings">Settings</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="github">Github</string>
    <string name="email">Email</string>
    <string name="source">How did you find Perka?</string>
    <string name="resume">Resume.pdf</string>
    <string name="apply">Apply!</string>
    <string name="title_activity_file_picker">FilePicker</string>
    <string name="serverUrl">https://api.perka.com/1/communication/job/apply</string>
    <string name="position">GENERALIST</string>

</resources>
